--- a/openlife.html
+++ b/openlife.html
@@ -17,22 +17,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>OpenLife</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3953320884"/>
-  <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=4035253141" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4209590929"/>
+  <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=3821703911" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3,n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,n3:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/nxV7qI7HSTingk2gzoEni6Txl5FDLkJkCDBDHbd2-7wfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MqGIQWmDZZMgxVWs3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/rl-gNclOTTbScoJOrstSUpsGa7ZVyG3zFIXtNm90dvvfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MqGIQWmDZZMgUz1s3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -41,15 +37,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu6188"><!-- group -->
-    <div class="grpelem" id="u6188"><!-- simple frame --></div>
-    <!-- m_editable region-id="editable-static-tag-U5666-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="Title clearfix grpelem" id="u5666-4" data-muse-uid="U5666" data-muse-type="txt_frame"><!-- content -->
-     <h1>OpenLife Groups</h1>
-    </div>
-    <!-- /m_editable -->
-    <div class="grpelem" id="u5667"><!-- simple frame --></div>
+  <div class="clearfix" id="page"><!-- column -->
+   <div class="clearfix colelem" id="ppamphletu5224"><!-- group -->
     <div class="PamphletWidget clearfix grpelem" id="pamphletu5224"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem" id="u5230"><!-- none box -->
       <div class="popup_anchor" id="u5231popup">
@@ -62,54 +51,58 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="popup_anchor" id="u5235popup">
       <div class="ContainerGroup clearfix" id="u5235"><!-- stack box -->
-       <div class="Container invi clearfix grpelem" id="u5236"><!-- group -->
-        <div class="clearfix grpelem" id="u5240-3"><!-- content -->
-         <p>&nbsp;</p>
+       <div class="Container invi clearfix grpelem" id="u5236"><!-- column -->
+        <div class="clearfix colelem" id="pu5240-3"><!-- group -->
+         <div class="clearfix grpelem" id="u5240-3"><!-- content -->
+          <p>&nbsp;</p>
+         </div>
+         <div class="PamphletWidget clearfix grpelem" id="pamphletu6020"><!-- none box -->
+          <div class="ThumbGroup clearfix grpelem" id="u6025"><!-- none box -->
+           <div class="popup_anchor" id="u6026popup">
+            <div class="Thumb popup_element clearfix" id="u6026"><!-- column -->
+             <div class="colelem" id="u6029"><!-- simple frame --></div>
+             <div class="colelem" id="u6027"><!-- simple frame --></div>
+             <div class="colelem" id="u6028"><!-- simple frame --></div>
+            </div>
+           </div>
+          </div>
+          <div class="popup_anchor" id="u6030popup">
+           <div class="ContainerGroup clearfix" id="u6030"><!-- stack box -->
+            <div class="Container invi clearfix grpelem" id="u6031"><!-- column -->
+             <div class="clearfix colelem" id="u6041-3"><!-- content -->
+              <p>&nbsp;</p>
+             </div>
+             <a class="nonblock nontext clearfix colelem" id="u6040-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u6040-2">READINGS</p></a>
+             <a class="nonblock nontext clearfix colelem" id="u6036-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u6036-2">SERMONS</p></a>
+             <a class="nonblock nontext clearfix colelem" id="u6037-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
+             <a class="nonblock nontext clearfix colelem" id="u6039-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u6039-2">EVENTS</p></a>
+             <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u6038-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u6038-2">OPENLIFE</p></a>
+             <div class="clearfix colelem" id="pu6042"><!-- group -->
+              <a class="nonblock nontext clip_frame grpelem" id="u6042" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u6043" src="images/pasted-svg-109665x109.svg?crc=3939634654" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576"/></a>
+              <a class="nonblock nontext clip_frame grpelem" id="u6032" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u6033" src="images/pasted-svg-109665x1092.svg?crc=223350899" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327"/></a>
+              <a class="nonblock nontext clip_frame grpelem" id="u6034" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u6035" src="images/pasted-svg-109665x1093.svg?crc=4186153669" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227"/></a>
+             </div>
+            </div>
+           </div>
+          </div>
+          <div class="popup_anchor" id="u6022popup">
+           <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u6022"><!-- group -->
+            <div class="grpelem" id="u6024" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+            <div class="grpelem" id="u6023" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+           </div>
+          </div>
+         </div>
         </div>
-        <div class="clearfix grpelem" id="u5237-4"><!-- content -->
+        <div class="clearfix colelem" id="u5237-4"><!-- content -->
          <p id="u5237-2">READINGS</p>
         </div>
-        <a class="nonblock nontext clearfix grpelem" id="u5238-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u5238-2">DISCIPLESHIP</p></a>
-        <a class="nonblock nontext clearfix grpelem" id="u5239-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u5239-2">SERMONS</p></a>
-        <a class="nonblock nontext grpelem" id="u5242" href="https://www.facebook.com/gawlerunitingchurch" target="_blank" title="Facebook"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u5241" href="mailto:office@gawleruniting.org.au" target="_blank" title="Email"><!-- simple frame --></a>
-        <a class="nonblock nontext clearfix grpelem" id="u5243-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u5243-2">EVENTS</p></a>
-        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u5244-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u5244-2">OPENLIFE</p></a>
-        <div class="PamphletWidget clearfix grpelem" id="pamphletu6020"><!-- none box -->
-         <div class="ThumbGroup clearfix grpelem" id="u6025"><!-- none box -->
-          <div class="popup_anchor" id="u6026popup">
-           <div class="Thumb popup_element clearfix" id="u6026"><!-- column -->
-            <div class="colelem" id="u6029"><!-- simple frame --></div>
-            <div class="colelem" id="u6027"><!-- simple frame --></div>
-            <div class="colelem" id="u6028"><!-- simple frame --></div>
-           </div>
-          </div>
-         </div>
-         <div class="popup_anchor" id="u6030popup">
-          <div class="ContainerGroup clearfix" id="u6030"><!-- stack box -->
-           <div class="Container invi clearfix grpelem" id="u6031"><!-- column -->
-            <div class="clearfix colelem" id="u6041-3"><!-- content -->
-             <p>&nbsp;</p>
-            </div>
-            <a class="nonblock nontext clearfix colelem" id="u6040-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u6040-2">READINGS</p></a>
-            <a class="nonblock nontext clearfix colelem" id="u6036-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u6036-2">SERMONS</p></a>
-            <a class="nonblock nontext clearfix colelem" id="u6037-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u6037-2">DISCIPLESHIP</p></a>
-            <a class="nonblock nontext clearfix colelem" id="u6039-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u6039-2">EVENTS</p></a>
-            <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u6038-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u6038-2">OPENLIFE</p></a>
-            <div class="clearfix colelem" id="pu6042"><!-- group -->
-             <a class="nonblock nontext clip_frame grpelem" id="u6042" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u6043" src="images/pasted-svg-109665x109.svg?crc=3939634654" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576"/></a>
-             <a class="nonblock nontext clip_frame grpelem" id="u6032" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u6033" src="images/pasted-svg-109665x1092.svg?crc=223350899" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327"/></a>
-             <a class="nonblock nontext clip_frame grpelem" id="u6034" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u6035" src="images/pasted-svg-109665x1093.svg?crc=4186153669" width="60" height="60" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227"/></a>
-            </div>
-           </div>
-          </div>
-         </div>
-         <div class="popup_anchor" id="u6022popup">
-          <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u6022"><!-- group -->
-           <div class="grpelem" id="u6024" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-           <div class="grpelem" id="u6023" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-          </div>
-         </div>
+        <a class="nonblock nontext clearfix colelem" id="u5239-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u5239-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u5238-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u5238-2">DISCIPLESHIP</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u5243-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u5243-2">EVENTS</p></a>
+        <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u5244-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u5244-2">OPENLIFE</p></a>
+        <div class="clearfix colelem" id="pu5242"><!-- group -->
+         <a class="nonblock nontext grpelem" id="u5242" href="https://www.facebook.com/gawlerunitingchurch" target="_blank" title="Facebook"><!-- simple frame --></a>
+         <a class="nonblock nontext grpelem" id="u5241" href="mailto:office@gawleruniting.org.au" target="_blank" title="Email"><!-- simple frame --></a>
         </div>
        </div>
       </div>
@@ -123,8 +116,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <a class="anchor_item grpelem" id="top"></a>
    </div>
-   <div class="verticalspacer" data-offset-top="96" data-content-above-spacer="535" data-content-below-spacer="81"></div>
-   <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+   <!-- m_editable region-id="editable-static-tag-U5666-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
+   <div class="Title clearfix colelem" id="u5666-4" data-muse-uid="U5666" data-muse-type="txt_frame"><!-- content -->
+    <h1>OpenLife Groups</h1>
+   </div>
+   <!-- /m_editable -->
+   <div class="clearfix colelem" id="pu6188"><!-- group -->
+    <div class="grpelem" id="u6188"><!-- simple frame --></div>
+    <div class="grpelem" id="u5667"><!-- simple frame --></div>
+   </div>
+   <div class="verticalspacer" data-offset-top="96" data-content-above-spacer="95" data-content-below-spacer="611"></div>
+   <a class="nonblock nontext clearfix colelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
