--- a/keys-to-discipleship.html
+++ b/keys-to-discipleship.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "discipleship.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "keys-to-discipleship.css"], "outOfDate":[]};
 </script>
   
-  <title>Discipleship</title>
+  <title>Keys to Discipleship</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4284037342"/>
-  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=3946526488" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/keys-to-discipleship.css?crc=4233431388" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_discipleship.css?crc=3896994" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_keys-to-discipleship.css?crc=414352051" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/ImZHnO2k1eZ6RzTG-j1sHRVhNJmUa0rHyzfTGD2JnsXfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgx_W93b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/wnbN8PRzMZIBGi5k3gUtdHUpUZlW79kxipEe1IT0-kGfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgynd93b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="breakpoint active" id="bp_infinity" data-min-width="381"><!-- responsive breakpoint node -->
+  <div class="breakpoint active" id="bp_infinity" data-min-width="431"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="PamphletWidget clearfix grpelem" id="pamphletu11887"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem" id="u11891"><!-- none box -->
@@ -62,7 +62,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11900-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u11900-4_content"><!-- content --><p id="u11900-2">READINGS</p></a>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11901-4" href="sermon.html" data-href="page:U5450" data-content-guid="u11901-4_content"><!-- content --><p id="u11901-2">SERMONS</p></a>
-        <a class="nonblock nontext MuseLinkActive clearfix colelem shared_content" id="u11903-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u11903-4_content"><!-- content --><p id="u11903-2">DISCIPLESHIP</p></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u11903-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u11903-4_content"><!-- content --><p id="u11903-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11902-4" href="events.html" data-href="page:U5505" data-content-guid="u11902-4_content"><!-- content --><p id="u11902-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11905-4" href="openlife.html" data-href="page:U5698" data-content-guid="u11905-4_content"><!-- content --><p id="u11905-2">OPENLIFE</p></a>
         <div class="clearfix colelem shared_content" id="pu11906" data-content-guid="pu11906_content"><!-- group -->
@@ -80,34 +80,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clearfix grpelem shared_content" id="pu18040-4" data-content-guid="pu18040-4_content"><!-- column -->
-     <!-- m_editable region-id="editable-static-tag-U18040-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="Title clearfix colelem" id="u18040-4" data-muse-uid="U18040" data-muse-type="txt_frame"><!-- content -->
-      <h1>DISCIPLESHIP</h1>
+    <div class="clearfix grpelem shared_content" id="pu18792-4" data-content-guid="pu18792-4_content"><!-- column -->
+     <!-- m_editable region-id="editable-static-tag-U18792-BP_infinity" template="keys-to-discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="Title clearfix colelem" id="u18792-4" data-muse-uid="U18792" data-muse-type="txt_frame"><!-- content -->
+      <h1>KEYS TO DISCIPLESHIP</h1>
      </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U17949-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u17949-10" href="evangelism.html" data-href="page:U18494" data-muse-uid="U17949" data-muse-type="txt_frame"><!-- content --><p id="u17949-8"><span id="u17949">Evangelism Questions</span><span id="u17949-3"><br/></span><span id="u17949-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
-     <!-- /m_editable -->
+     <div class="colelem" id="u6188"><!-- simple frame --></div>
     </div>
-    <!-- m_editable region-id="editable-static-tag-U18013-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background rounded-corners clearfix grpelem shared_content" id="u18013-10" href="bible-questions.html" data-href="page:U18781" data-muse-uid="U18013" data-muse-type="txt_frame" data-content-guid="u18013-10_content"><!-- content --><p id="u18013-8"><span id="u18013">Bible Questions</span><span id="u18013-3"><br/></span><span id="u18013-7">Tools to go deeper in our bible reading.<br/>Tools to go deeper in our bible reading.</span></p></a>
-    <!-- /m_editable -->
-    <div class="clearfix grpelem" id="pu18022-10"><!-- column -->
-     <!-- m_editable region-id="editable-static-tag-U18022-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem shared_content" id="u18022-10" href="keys-to-discipleship.html" data-href="page:U18803" data-muse-uid="U18022" data-muse-type="txt_frame" data-content-guid="u18022-10_content"><!-- content --><p id="u18022-8"><span id="u18022-3">Keys to Discipleship<br/></span><span id="u18022-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U18031-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem shared_content" id="u18031-10" href="tithing.html" data-href="page:U18825" data-muse-uid="U18031" data-muse-type="txt_frame" data-content-guid="u18031-10_content"><!-- content --><p id="u18031-8"><span id="u18031-3">Tithing<br/></span><span id="u18031-7">What Does this even means<br/>How can I tithe?</span></p></a>
-     <!-- /m_editable -->
-    </div>
-    <a class="anchor_item grpelem shared_content" id="top" data-content-guid="top_content"></a>
-    <div class="grpelem shared_content" id="u6188" data-content-guid="u6188_content"><!-- simple frame --></div>
-    <div class="verticalspacer" data-offset-top="441" data-content-above-spacer="441" data-content-below-spacer="81"></div>
+    <div class="verticalspacer" data-offset-top="77" data-content-above-spacer="88" data-content-below-spacer="81"></div>
     <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
   </div>
-  <div class="breakpoint" id="bp_380" data-max-width="380"><!-- responsive breakpoint node -->
+  <div class="breakpoint" id="bp_430" data-min-width="381" data-max-width="430"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu11887"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u11891"><!-- none box -->
@@ -125,7 +110,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <span class="museBGSize clearfix colelem placeholder" data-placeholder-for="u11904-3_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11900-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11901-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext MuseLinkActive clearfix colelem placeholder" data-placeholder-for="u11903-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11903-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11902-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11905-4_content"><!-- placeholder node --></span>
         <span class="clearfix colelem placeholder" data-placeholder-for="pu11906_content"><!-- placeholder node --></span>
@@ -139,22 +124,46 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu18040-4_content"><!-- placeholder node --></span>
-    <!-- m_editable region-id="editable-static-tag-U18013-BP_380" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <span class="nonblock nontext rgba-background rounded-corners clearfix grpelem placeholder" data-placeholder-for="u18013-10_content"><!-- placeholder node --></span>
-    <!-- /m_editable -->
-    <div class="clearfix grpelem" id="pu6188"><!-- column -->
-     <span class="colelem placeholder" data-placeholder-for="u6188_content"><!-- placeholder node --></span>
-     <!-- m_editable region-id="editable-static-tag-U18022-BP_380" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <span class="nonblock nontext rgba-background rounded-corners clearfix colelem placeholder" data-placeholder-for="u18022-10_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U18031-BP_380" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <span class="nonblock nontext rgba-background rounded-corners clearfix colelem placeholder" data-placeholder-for="u18031-10_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
-    </div>
-    <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="441" data-content-above-spacer="441" data-content-below-spacer="81"></div>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu18792-4_content"><!-- placeholder node --></span>
+    <div class="verticalspacer shared_content" data-offset-top="71" data-content-above-spacer="88" data-content-below-spacer="81" data-content-guid="page_2_content"></div>
     <span class="nonblock nontext rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_380" data-max-width="380"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu11887"><!-- none box -->
+     <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u11891"><!-- none box -->
+      <div class="popup_anchor temp_no_id" data-orig-id="u11892popup">
+       <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u11892"><!-- column -->
+        <span class="colelem placeholder" data-placeholder-for="u11893_content"><!-- placeholder node --></span>
+        <span class="colelem placeholder" data-placeholder-for="u11894_content"><!-- placeholder node --></span>
+        <span class="colelem placeholder" data-placeholder-for="u11895_content"><!-- placeholder node --></span>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor temp_no_id" data-orig-id="u11896popup">
+      <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u11896"><!-- stack box -->
+       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u11897"><!-- column -->
+        <span class="clearfix colelem placeholder" data-placeholder-for="u11904-3_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11900-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11901-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11903-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11902-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11905-4_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu11906_content"><!-- placeholder node --></span>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor temp_no_id" data-orig-id="u11888popup">
+      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u11888"><!-- group -->
+       <span class="grpelem placeholder" data-placeholder-for="u11890_content"><!-- placeholder node --></span>
+       <span class="grpelem placeholder" data-placeholder-for="u11889_content"><!-- placeholder node --></span>
+      </div>
+     </div>
+    </div>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu18792-4_content"><!-- placeholder node --></span>
+    <span class="verticalspacer placeholder" data-placeholder-for="page_2_content"><!-- placeholder node --></span>
+    <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
    </div>
   </div>
   <!-- Other scripts -->
@@ -168,7 +177,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu11887', ['#bp_infinity', '#bp_380'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu11887 */
+Muse.Utils.initWidget('#pamphletu11887', ['#bp_infinity', '#bp_430', '#bp_380'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu11887 */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
