--- a/bible-questions.html
+++ b/bible-questions.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "discipleship.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "bible-questions.css"], "outOfDate":[]};
 </script>
   
-  <title>Discipleship</title>
+  <title>Bible Questions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4284037342"/>
-  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=3946526488" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/bible-questions.css?crc=486296398" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_discipleship.css?crc=3896994" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_bible-questions.css?crc=3849275139" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/ImZHnO2k1eZ6RzTG-j1sHRVhNJmUa0rHyzfTGD2JnsXfeCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgx_W93b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/CGmFN65IkDQTCtfoHTNjsvLyqlBvf7khkAGqGqfxu09fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgyOd93b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -57,12 +57,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="popup_anchor" id="u11896popup">
       <div class="ContainerGroup clearfix" id="u11896"><!-- stack box -->
        <div class="Container invi clearfix grpelem" id="u11897"><!-- column -->
-        <div class="museBGSize clearfix colelem shared_content" id="u11904-3" data-content-guid="u11904-3_content"><!-- content -->
+        <div class="clearfix colelem shared_content" id="u11904-3" data-content-guid="u11904-3_content"><!-- content -->
          <p>&nbsp;</p>
         </div>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11900-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u11900-4_content"><!-- content --><p id="u11900-2">READINGS</p></a>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11901-4" href="sermon.html" data-href="page:U5450" data-content-guid="u11901-4_content"><!-- content --><p id="u11901-2">SERMONS</p></a>
-        <a class="nonblock nontext MuseLinkActive clearfix colelem shared_content" id="u11903-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u11903-4_content"><!-- content --><p id="u11903-2">DISCIPLESHIP</p></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u11903-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u11903-4_content"><!-- content --><p id="u11903-2">DISCIPLESHIP</p></a>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11902-4" href="events.html" data-href="page:U5505" data-content-guid="u11902-4_content"><!-- content --><p id="u11902-2">EVENTS</p></a>
         <a class="nonblock nontext clearfix colelem shared_content" id="u11905-4" href="openlife.html" data-href="page:U5698" data-content-guid="u11905-4_content"><!-- content --><p id="u11905-2">OPENLIFE</p></a>
         <div class="clearfix colelem shared_content" id="pu11906" data-content-guid="pu11906_content"><!-- group -->
@@ -80,31 +80,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clearfix grpelem shared_content" id="pu18040-4" data-content-guid="pu18040-4_content"><!-- column -->
-     <!-- m_editable region-id="editable-static-tag-U18040-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="Title clearfix colelem" id="u18040-4" data-muse-uid="U18040" data-muse-type="txt_frame"><!-- content -->
-      <h1>DISCIPLESHIP</h1>
+    <div class="clearfix grpelem shared_content" id="pu18764-4" data-content-guid="pu18764-4_content"><!-- column -->
+     <!-- m_editable region-id="editable-static-tag-U18764-BP_infinity" template="bible-questions.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="Title clearfix colelem" id="u18764-4" data-muse-uid="U18764" data-muse-type="txt_frame"><!-- content -->
+      <h1>BIBLE QUESTIONS</h1>
      </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U17949-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem" id="u17949-10" href="evangelism.html" data-href="page:U18494" data-muse-uid="U17949" data-muse-type="txt_frame"><!-- content --><p id="u17949-8"><span id="u17949">Evangelism Questions</span><span id="u17949-3"><br/></span><span id="u17949-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
-     <!-- /m_editable -->
+     <div class="colelem" id="u6188"><!-- simple frame --></div>
     </div>
-    <!-- m_editable region-id="editable-static-tag-U18013-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background rounded-corners clearfix grpelem shared_content" id="u18013-10" href="bible-questions.html" data-href="page:U18781" data-muse-uid="U18013" data-muse-type="txt_frame" data-content-guid="u18013-10_content"><!-- content --><p id="u18013-8"><span id="u18013">Bible Questions</span><span id="u18013-3"><br/></span><span id="u18013-7">Tools to go deeper in our bible reading.<br/>Tools to go deeper in our bible reading.</span></p></a>
-    <!-- /m_editable -->
-    <div class="clearfix grpelem" id="pu18022-10"><!-- column -->
-     <!-- m_editable region-id="editable-static-tag-U18022-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem shared_content" id="u18022-10" href="keys-to-discipleship.html" data-href="page:U18803" data-muse-uid="U18022" data-muse-type="txt_frame" data-content-guid="u18022-10_content"><!-- content --><p id="u18022-8"><span id="u18022-3">Keys to Discipleship<br/></span><span id="u18022-7">Tools to go deeper in our conversations.<br/>Tools to go deeper in our conversations.</span></p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U18031-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background rounded-corners clearfix colelem shared_content" id="u18031-10" href="tithing.html" data-href="page:U18825" data-muse-uid="U18031" data-muse-type="txt_frame" data-content-guid="u18031-10_content"><!-- content --><p id="u18031-8"><span id="u18031-3">Tithing<br/></span><span id="u18031-7">What Does this even means<br/>How can I tithe?</span></p></a>
-     <!-- /m_editable -->
-    </div>
-    <a class="anchor_item grpelem shared_content" id="top" data-content-guid="top_content"></a>
-    <div class="grpelem shared_content" id="u6188" data-content-guid="u6188_content"><!-- simple frame --></div>
-    <div class="verticalspacer" data-offset-top="441" data-content-above-spacer="441" data-content-below-spacer="81"></div>
-    <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+    <div class="verticalspacer shared_content" data-offset-top="77" data-content-above-spacer="88" data-content-below-spacer="81" data-content-guid="page_2_content"></div>
+    <a class="nonblock nontext clearfix grpelem shared_content" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
   </div>
   <div class="breakpoint" id="bp_380" data-max-width="380"><!-- responsive breakpoint node -->
@@ -122,10 +107,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="popup_anchor temp_no_id" data-orig-id="u11896popup">
       <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u11896"><!-- stack box -->
        <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u11897"><!-- column -->
-        <span class="museBGSize clearfix colelem placeholder" data-placeholder-for="u11904-3_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="u11904-3_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11900-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11901-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext MuseLinkActive clearfix colelem placeholder" data-placeholder-for="u11903-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11903-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11902-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11905-4_content"><!-- placeholder node --></span>
         <span class="clearfix colelem placeholder" data-placeholder-for="pu11906_content"><!-- placeholder node --></span>
@@ -139,22 +124,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu18040-4_content"><!-- placeholder node --></span>
-    <!-- m_editable region-id="editable-static-tag-U18013-BP_380" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <span class="nonblock nontext rgba-background rounded-corners clearfix grpelem placeholder" data-placeholder-for="u18013-10_content"><!-- placeholder node --></span>
-    <!-- /m_editable -->
-    <div class="clearfix grpelem" id="pu6188"><!-- column -->
-     <span class="colelem placeholder" data-placeholder-for="u6188_content"><!-- placeholder node --></span>
-     <!-- m_editable region-id="editable-static-tag-U18022-BP_380" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <span class="nonblock nontext rgba-background rounded-corners clearfix colelem placeholder" data-placeholder-for="u18022-10_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U18031-BP_380" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <span class="nonblock nontext rgba-background rounded-corners clearfix colelem placeholder" data-placeholder-for="u18031-10_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
-    </div>
-    <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="441" data-content-above-spacer="441" data-content-below-spacer="81"></div>
-    <span class="nonblock nontext rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu18764-4_content"><!-- placeholder node --></span>
+    <span class="verticalspacer placeholder" data-placeholder-for="page_2_content"><!-- placeholder node --></span>
+    <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
    </div>
   </div>
   <!-- Other scripts -->
@@ -163,7 +135,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch","jquery.museresponsive"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch","jquery.museresponsive"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
